--- a/styles/header.css
+++ b/styles/header.css
@@ -72,6 +72,20 @@
     width: 50%;
     height: 100%;
     align-items: center;
-    justify-content: space-between;
-    
+    justify-content: space-between;    
+}
+
+@media(max-width: 800px) {
+    #logo-header h1 {
+        font-size: 10vw;        
+    }
+    #logo-header p {
+        font-size: 6vw;
+    }
+    #social-media {
+        display: none;
+    }
+    #top-bottom {
+        display: none;
+    }
 }
