--- a/styles/header.css
+++ b/styles/header.css
@@ -72,7 +72,9 @@
     width: 50%;
     height: 100%;
     align-items: center;
-    justify-content: space-between;    
+    justify-content: space-between;
+    font-size: 10pt;
+    font-weight: bold;
 }
 
 @media(max-width: 800px) {
