--- a/styles/pet-family.css
+++ b/styles/pet-family.css
@@ -1,21 +1,58 @@
-#pet-family {
-    display: flex;
+#pet-family {   
     height: 100vh;
-    width: 100%;
-    background-image: url(../assets/background-pet-01.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    width: 100%;   
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    margin-top: 35px;
 }
 
 #box-family {
+    position: absolute;
+    left: 33%;
+    top: 62%;    
     height: auto;
     width: 40%;
     color: #ffffff;
     text-align: center;
 }
+
+/* Carrosel */
+
+#container-carrosel {
+    display: flex;
+    height: 100%;
+    width: 400%;
+    animation-name: carrosel;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;    
+}
+
+.carrosel {
+    height: 100%;
+    width: 25%;   
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+#back-01 {
+    background-image: url('../assets/background-pet-01.png');
+}
+
+#back-02 {
+    background-image: url('../assets/background-pet-02.png');
+}
+
+#back-03 {
+    background-image: url('../assets/background-pet-03.png');
+}
+
+#back-4 {
+    background-image: url('../assets/background-pet-01.png');
+}
+
+/* Fim do carrosel */
 
 #box-family h1 {
     font-size: 5vw;    
@@ -39,6 +76,9 @@
 }
 
 @media(max-width: 800px){
+    #box-family {
+        top: 50vw;
+    }
     #chat {
         display: none;
     }
