--- a/styles/options.css
+++ b/styles/options.css
@@ -47,9 +47,14 @@
 }
 
 .box-options h1 {
-    line-height: 60px;
+    /* line-height: 60px; */
     color: #8FD3E8;
     font-weight: normal;
+    height: 70px;
+}
+
+#box-history {
+    padding-top: 10px;
 }
 
 .bt-options {
@@ -79,7 +84,7 @@
     }
     #box-title-options h1{
         font-size: 7vw;
-        line-height: 30px;
+        line-height: 40px;
         margin-bottom: 30px;
         margin-top: 30px;
     }
@@ -98,8 +103,13 @@
         font-size: 4vw;
     }
     .bt-options {
-        font-size: 4vw;
+        font-size: 13pt;
         width: 150px;
     }
+}
 
+@media(max-width: 500px) {
+    #box-title-options h1 {
+        line-height: 30px;
+    }
 }
